<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/gridPizza"
        android:layout_below="@+id/button"
        android:layout_above="@+id/butSalir3" />

    <Button
        android:text="@string/butSal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:id="@+id/butSalir3"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:text="@string/textTitulo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:textSize="36sp"
        android:layout_marginTop="19dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinTipoBebida"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/textView11"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/textCant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textSize="24sp"
        android:layout_below="@+id/spinTipoBebida"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_alignTop="@+id/textView7"
        android:layout_toRightOf="@+id/textView7"
        android:layout_alignRight="@+id/textView11"
        android:layout_alignEnd="@+id/textView11" />

    <Button
        android:text="@string/butAña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_alignTop="@+id/editText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp" />

    <Button
        android:text="@string/butAnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/butAnterior"
        android:layout_alignBaseline="@+id/butSalir3"
        android:layout_alignBottom="@+id/butSalir3"
        android:layout_toRightOf="@+id/editText"
        android:layout_toEndOf="@+id/editText" />

    <Button
        android:text="@string/butSig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/butSiguiente3"
        android:layout_alignBaseline="@+id/butAnterior"
        android:layout_alignBottom="@+id/butAnterior"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>