<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_portada"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alumno.pizzabank.Portada">

    <TextView
        android:text="@string/textNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:id="@+id/textView3"
        android:textSize="24sp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/editNombre"
        android:layout_toStartOf="@+id/editNombre" />

    <TextView
        android:text="@string/textTitulo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView"
        android:textSize="36sp" />

    <TextView
        android:text="@string/textDir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/textView4"
        android:textSize="24sp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/editDireccion"
        android:layout_toLeftOf="@+id/editDireccion" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editNombre"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/textTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/textView2"
        android:textSize="24sp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/editTelefono"
        android:layout_toLeftOf="@+id/editTelefono" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editDireccion"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignLeft="@+id/editDireccion"
        android:layout_alignStart="@+id/editDireccion"
        android:id="@+id/editTelefono" />

    <Button
        android:text="@string/butSig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:id="@+id/butSiguiente1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/butAnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/butAnterior1"
        android:layout_alignBaseline="@+id/butSalir1"
        android:layout_alignBottom="@+id/butSalir1"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/butSal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/butSalir1"
        android:layout_alignBaseline="@+id/butSiguiente1"
        android:layout_alignBottom="@+id/butSiguiente1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
