<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/textTitulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textSize="36sp"
        android:layout_marginTop="19dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinTipo"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp" />

    <TextView
        android:text="@string/textCant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:id="@+id/textView6"
        android:textSize="24sp"
        android:layout_alignTop="@+id/spinMasa"
        android:layout_toRightOf="@+id/spinMasa"
        android:layout_toEndOf="@+id/spinMasa" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editCantidad"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinTamaño"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/editCantidad"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/textView6"
        android:layout_toStartOf="@+id/textView6" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:id="@+id/spinMasa"
        android:layout_below="@+id/spinTipo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignEnd="@+id/textView5" />

    <Button
        android:text="@string/butAña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/butAñadir1"
        android:layout_below="@+id/editCantidad"
        android:layout_toLeftOf="@+id/editCantidad"
        android:layout_toStartOf="@+id/editCantidad" />

    <Button
        android:text="@string/butSal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:id="@+id/butSalir2"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <Button
        android:text="@string/butAnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/butAnterior2"
        android:layout_alignBaseline="@+id/butSalir2"
        android:layout_alignBottom="@+id/butSalir2"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/butSig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/butSiguiente2"
        android:layout_alignBaseline="@+id/butAnterior2"
        android:layout_alignBottom="@+id/butAnterior2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="14dp"
        android:layout_marginEnd="14dp" />

    <GridView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/butAñadir1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/butSalir2"
        android:id="@+id/gridPizza" />
</RelativeLayout>